# thesis_dev_final_fr

./: .gitignore  CMakeLists.txt  points.txt  points1.txt  settings.json
cuda/: cuda_projection.cu
include/: cuda_projection.hpp  ellipsoid.hpp  nbvstrategy.hpp  nbvtransform.hpp  structs.hpp  utils.hpp  voxelstruct.hpp
nbv_raw/march14/: capture1.ply  pcd0_trans.ply  pcd1_trans.ply  pcd2_trans.ply  pcd3_trans.ply
nbv_raw/march14/merged/: pcd1t.ply
nbv_raw/march15/: cap1.ply  capture0.ply  pcd0t.ply  pcd1t.ply  pcd2t.ply  pcd4t.ply
nbv_raw/march15/merged/: pcd0t.ply  pcd1t.ply
nbv_raw/march18/chair/: cap0.ply  cap1.ply  pcd0t.ply  (+1 more)
nbv_raw/test/: capture_000.ply  pcd00_trans.ply  pcd0_occupied.txt  pcd0_roi_frontiers.txt  pcd0_save_frontier.ply  pcd0_save_occupied.ply  pcd0_save_roi_frontier.ply  pcd0_surface_frontiers.txt  pcd0_trans.ply
point_clouds/classified_points/: pcd0_classified_frontier.ply  pcd0_classified_occupied.ply  pcd0_classified_roi_frontier.ply
point_clouds/new_test_capture/: capture_000.ply  capture_001.ply  capture_002.ply  capture_003.ply  capture_004.ply
point_clouds/pcds/: capture000_fixed.ply  capture_000.ply
point_clouds/pcdstf/: pcd0.ply
point_clouds/plstcchrxzywrld/: pcd0.ply  pcd0_inverse.ply  pcd0_translation_only.ply  pcd2.ply  pcd2_inverse.ply  pcd2_translation_only.ply
point_clouds/test_gravToff/: capture_000.ply  capture_002.ply  pcd0_transformed.ply  pcd1_transformed.ply
src/: ellipsoid.cpp  main.cpp  nbvstrategy.cpp  nbvtransform.cpp  utils.cpp  voxelstruct.cpp
tfpcds/: capture0.ply  capture0_cropped.ply
(+11 files in other folders)
